5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1593_1801.log
== TEST (2019-03-28 10:20:31) 
-- CODE:
a = int(input("Nome_do_objeto: "))
b = int(input("Repeticao: "))
print("Abra" + a*b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:20:48) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print("Abra" + a*b)

-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:06) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print("Abra", a*b)

-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:21) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print("Abra"*b, a*b)

-- OUTPUT:
AbraAbraAbraAbraAbraAbraAbraAbra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:05) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
print("Abra", a)
-- ERROR:
File "XXXX", line 3
    print("Abra", a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:18) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
print("Abra")
-- ERROR:
File "XXXX", line 3
    print("Abra")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:26) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
print(Abra)
-- ERROR:
File "XXXX", line 3
    print(Abra)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:38) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
print("Abra")
-- ERROR:
File "XXXX", line 3
    print("Abra")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:50) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
print("Abra", a*b)
-- ERROR:
File "XXXX", line 3
    print("Abra", a*b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:02) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
		  
-- ERROR:
File "XXXX", line 4
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:08) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: ")
-- ERROR:
File "XXXX", line 3
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:18) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
-- ERROR:
File "XXXX", line 3
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:24:07) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print("Abra + a"*b)
-- OUTPUT:
Abra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:24:21) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print("Abra + a"*b)
-- OUTPUT:
Abra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:24:55) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print(("Abra" + a)*b)

-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:18) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print(("Abra", a)*b)

-- OUTPUT:
('Abra', 'livro', 'Abra', 'livro', 'Abra', 'livro', 'Abra', 'livro', 'Abra', 'livro', 'Abra', 'livro', 'Abra', 'livro', 'Abra', 'livro')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:40) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print(("Abra" + a)*b)

-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:25:54) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print(("Abra" + a)*b)

-- EXECUTION TIME:
0.131743
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:26:01) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print(("Abra" + a)*b)

-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:26:23) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print(("Abra + a")*b)

-- OUTPUT:
Abra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:16) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra" + " a ")*b)

-- OUTPUT:
Abra a  Abra a  Abra a  Abra a  Abra a  Abra a  Abra a  Abra a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:32) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra" + a )*b)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:27:33) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra" + a )*b)

-- EXECUTION TIME:
0.11684
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:33) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra" + a )*b)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:42) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra" + a )*b)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:27:54) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra " + a )*b)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:28:00) 
-- CODE:
a = input("Nome_do_objeto: ")
b = int(input("Repeticao: "))
print((" Abra " + a )*b)

-- EXECUTION TIME:
0.130144
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
